--- a/cloudfoundry-client-spring/pom.xml
+++ b/cloudfoundry-client-spring/pom.xml
@@ -66,6 +66,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>test-utils</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
