Changes to deployment
This change updates the configuration of the projects to deploy to
repo.spring.io.

--- a/cf-java-client-test-apps/simple-spring-app/pom.xml
+++ b/cf-java-client-test-apps/simple-spring-app/pom.xml
@@ -145,6 +145,13 @@
                     <warName>simple-spring-app</warName>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
