--- a/cf-java-client-test-apps/non-ascii-file-name/pom.xml
+++ b/cf-java-client-test-apps/non-ascii-file-name/pom.xml
@@ -145,6 +145,13 @@
                     <warName>non-ascii-file-name</warName>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
