--- a/cloudfoundry-gradle-plugin/pom.xml
+++ b/cloudfoundry-gradle-plugin/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>cloudfoundry-operations</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
