--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-client-lib</artifactId>
-	<version>1.1.4.BUILD-SNAPSHOT</version>
+	<version>1.1.4.RELEASE</version>
 	<packaging>jar</packaging>
 	<name>Cloud Foundry Java Client Library</name>
 	<description>A Cloud Foundry client library for Java</description>
@@ -343,7 +343,7 @@
 								<contextUrl>https://repo.spring.io</contextUrl>
 								<username>{{ARTIFACTORY_USERNAME}}</username>
 								<password>{{ARTIFACTORY_PASSWORD}}</password>
-								<repoKey>{{ARTIFACTORY_REPO_KEY|"libs-milestone-local"}}</repoKey>
+								<repoKey>{{ARTIFACTORY_REPO_KEY|"libs-release-local"}}</repoKey>
 								<snapshotRepoKey>{{ARTIFACTORY_SNAPSHOT_REPO_KEY|"libs-snapshot-local"}}</snapshotRepoKey>
 							</publisher>
 						</configuration>
