--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cf-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.1.4.BUILD-SNAPSHOT</version>
+	<version>1.1.4.RELEASE</version>
 	<name>Cloud Foundry Maven Plugin</name>
 	<url>https://github.com/cloudfoundry/cf-java-client/cloudfoundry-maven-plugin</url>
 
@@ -84,7 +84,7 @@
 								<contextUrl>https://repo.spring.io</contextUrl>
 								<username>{{ARTIFACTORY_USERNAME}}</username>
 								<password>{{ARTIFACTORY_PASSWORD}}</password>
-								<repoKey>{{ARTIFACTORY_REPO_KEY|"libs-milestone-local"}}</repoKey>
+								<repoKey>{{ARTIFACTORY_REPO_KEY|"libs-release-local"}}</repoKey>
 								<snapshotRepoKey>{{ARTIFACTORY_SNAPSHOT_REPO_KEY|"libs-snapshot-local"}}</snapshotRepoKey>
 							</publisher>
 						</configuration>
