--- a/cloudfoundry-gradle-plugin/pom.xml
+++ b/cloudfoundry-gradle-plugin/pom.xml
@@ -69,6 +69,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>animal-sniffer-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
