Generalize Integration Test
This change updates the integration tests to work against other CFs.
Specifically, it is now less destructive towards PCF instances.

--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -10,6 +10,8 @@ run:
   path: cf-java-client/ci/integration-test.sh
 
 params:
+  TEST_DOMAIN:
+  TEST_HOST:
   TEST_ORGANIZATION:
   TEST_PASSWORD:
   TEST_SKIPSSLVALIDATION:
