--- a/cloudfoundry-client-spring/pom.xml
+++ b/cloudfoundry-client-spring/pom.xml
@@ -67,9 +67,8 @@
         </dependency>
         <dependency>
             <groupId>org.cloudfoundry</groupId>
-            <artifactId>test-utils</artifactId>
+            <artifactId>cloudfoundry-client-utils</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
