--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -73,7 +73,7 @@
         </dependency>
         <dependency>
             <groupId>org.cloudfoundry</groupId>
-            <artifactId>cloudfoundry-client-utils</artifactId>
+            <artifactId>cloudfoundry-util</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
