--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,10 @@
     <modules>
         <module>cloudfoundry-client</module>
         <module>cloudfoundry-client-spring</module>
-        <module>cloudfoundry-client-utils</module>
         <module>cloudfoundry-gradle-plugin</module>
         <module>cloudfoundry-maven-plugin</module>
         <module>cloudfoundry-operations</module>
+        <module>cloudfoundry-util</module>
         <module>integration-test</module>
     </modules>
 
