Randomize Test Order
This change ensures that the tests are run in a random order to help 
find tests with side-effects.

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
                             <include>**/*Test.java</include>
                             <include>**/*Test$*.java</include>
                         </includes>
+                        <runOrder>random</runOrder>
                     </configuration>
                 </plugin>
                 <plugin>
