--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -12,5 +12,6 @@ params:
   TEST_DOMAIN:
   TEST_HOST:
   TEST_PASSWORD:
+  TEST_PROTECTED_ORGANIZATION:
   TEST_SKIPSSLVALIDATION:
   TEST_USERNAME:
