Doppler on Reactor Netty
This is the first component in the project to be moved from a Spring-based
networking stack to Reactor Netty.  In addition to the implementation for
Doppler endpoints, this change also adds the common infrastructure and test
infrastructure for other components.

--- a/cloudfoundry-client/pom.xml
+++ b/cloudfoundry-client/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>protobuf-java</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.squareup.wire</groupId>
+            <artifactId>wire-runtime</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -62,6 +66,21 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.squareup.wire</groupId>
+                <artifactId>wire-maven-plugin</artifactId>
+                <configuration>
+                    <protoFiles>
+                        <param>envelope.proto</param>
+                        <param>error.proto</param>
+                        <param>http.proto</param>
+                        <param>log.proto</param>
+                        <param>metric.proto</param>
+                        <param>uuid.proto</param>
+                    </protoFiles>
+                    <protoSourceDirectory>${project.basedir}/../vendor/dropsonde-protocol/events</protoSourceDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
@@ -74,7 +93,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <sourceFileExcludes>
-                        <exclude>org/cloudfoundry/logging/LoggregatorProtocolBuffers.java</exclude>
+                        <exclude>org/cloudfoundry/dropsonde/events/*</exclude>
                     </sourceFileExcludes>
                 </configuration>
             </plugin>
