Update CI Image Declaration
This change updates the docker image declaration for the CI tasks.

--- a/ci/deploy.yml
+++ b/ci/deploy.yml
@@ -1,6 +1,11 @@
 ---
 platform: linux
-image: docker:///java#8-jdk
+
+image_resource:
+  type: docker-image
+  source:
+    repository: java
+    tag: 8-jdk
 
 inputs:
 - name: cf-java-client
