--- a/ci/documentation.yml
+++ b/ci/documentation.yml
@@ -4,8 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: java
-    tag: 8-jdk
+    repository: cfje/cf-java-client
 
 inputs:
 - name: cf-java-client
