Complete client featureflags integration tests
Added full tests for get/set and list which checks all the feature flags.

Integration test cleanup enhanced to (re)set flags that might have been
disturbed in test failures or manually between tests.

Added a `TEST_PROTECTED_FEATUREFLAGS` environment variable to integration test
to allow testers to prevent a flag being reset by cleanup. Added the variable
to the README documentation (and some polishing).

[#114250507]

--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -17,6 +17,7 @@ params:
   TEST_HOST:
   TEST_PASSWORD:
   TEST_PROTECTED_DOMAIN:
+  TEST_PROTECTED_FEATUREFLAGS:
   TEST_PROTECTED_ORGANIZATION:
   TEST_SKIPSSLVALIDATION:
   TEST_USERNAME:
