--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <lombok.version>1.16.8</lombok.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <protobuf.version>2.6.1</protobuf.version>
-        <reactor.version>2.5.0.M3</reactor.version>
+        <reactor.version>2.5.0.BUILD-SNAPSHOT</reactor.version>
     </properties>
 
     <dependencyManagement>
@@ -141,7 +141,7 @@
                 <plugin>
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok-maven-plugin</artifactId>
-                    <version>1.16.6.1</version>
+                    <version>1.16.8.0</version>
                     <executions>
                         <execution>
                             <id>delombok-source</id>
