--- a/cloudfoundry-client-spring/pom.xml
+++ b/cloudfoundry-client-spring/pom.xml
@@ -136,7 +136,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <excludePackageNames>org.cloudfoundry.spring.client.*,org.cloudfoundry.spring.logging.*,org.cloudfoundry.spring.uaa.*,org.cloudfoundry.spring.util,org.cloudfoundry.spring.util.*</excludePackageNames>
+                    <excludePackageNames>org.cloudfoundry.spring.client.*,org.cloudfoundry.spring.util,org.cloudfoundry.spring.util.*,org.cloudfoundry.reactor.client.*,org.cloudfoundry.reactor.doppler.*,org.cloudfoundry.reactor.uaa.*,org.cloudfoundry.reactor.util</excludePackageNames>
                 </configuration>
             </plugin>
             <plugin>
