--- a/cloudfoundry-client/pom.xml
+++ b/cloudfoundry-client/pom.xml
@@ -57,6 +57,11 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+          <dependency>
+              <groupId>org.immutables</groupId>
+              <artifactId>value</artifactId>
+              <scope>provided</scope>
+          </dependency>
     </dependencies>
 
     <build>
