--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     </modules>
 
     <properties>
+        <immutables.version>2.2</immutables.version>
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.6.0</jjwt.version>
         <lombok.version>1.16.8</lombok.version>
@@ -89,6 +90,11 @@
                 <groupId>io.projectreactor</groupId>
                 <artifactId>reactor-netty</artifactId>
                 <version>${reactor-netty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.immutables</groupId>
+                <artifactId>value</artifactId>
+                <version>${immutables.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
