--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
                             <arg>-Xlint:all</arg>
                             <arg>-Xlint:-options</arg>
                             <arg>-Xlint:-processing</arg>
+                            <arg>-Xlint:-serial</arg>
                         </compilerArgs>
                         <showWarnings>true</showWarnings>
                         <source>1.8</source>
