--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.6.0</jjwt.version>
         <lombok.version>1.16.8</lombok.version>
-        <netty.version>4.1.0.CR7</netty.version>
-        <okhttp.version>3.2.0</okhttp.version>
+        <netty.version>4.1.0.Final</netty.version>
+        <okhttp.version>3.3.0</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-core.version>2.5.0.BUILD-SNAPSHOT</reactor-core.version>
         <reactor-netty.version>2.5.0.BUILD-SNAPSHOT</reactor-netty.version>
