--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -14,6 +14,8 @@ run:
   path: cf-java-client/ci/integration-test.sh
 
 params:
+  TEST_CLIENT_ID:
+  TEST_CLIENT_SECRET:
   TEST_HOST:
   TEST_PASSWORD:
   TEST_PROTECTED_DOMAIN:
