--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
     <properties>
         <immutables.version>2.2.2</immutables.version>
+        <jackson.version>2.7.4</jackson.version>
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.6.0</jjwt.version>
         <lombok.version>1.16.8</lombok.version>
