UAA Users Integration Tests
This change adds integration tests for the UAA Users functionality, and handles
some edge cases in the UAA api such as the default admin user not having a
family name or given name.

It introduces a new environment variable, test.protected.users, which *must* be
set for tests to run.

[#114247177]

--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -21,5 +21,6 @@ params:
   TEST_PROTECTED_DOMAIN:
   TEST_PROTECTED_FEATUREFLAGS:
   TEST_PROTECTED_ORGANIZATION:
+  TEST_PROTECTED_USERS:
   TEST_SKIPSSLVALIDATION:
   TEST_USERNAME:
