--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.cloudfoundry</groupId>
         <artifactId>cloudfoundry-java-client</artifactId>
-        <version>2.0.0.BUILD-SNAPSHOT</version>
+        <version>2.0.0.M8</version>
     </parent>
 
     <artifactId>integration-test</artifactId>
