--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
         <netty.version>4.1.2.Final</netty.version>
         <okhttp.version>3.4.1</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <reactor-core.version>2.5.0.M4</reactor-core.version>
-        <reactor-netty.version>2.5.0.BUILD-SNAPSHOT</reactor-netty.version>
+        <reactor-core.version>3.0.0.BUILD-SNAPSHOT</reactor-core.version>
+        <reactor-netty.version>0.5.0.BUILD-SNAPSHOT</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
 
