--- a/cloudfoundry-client/pom.xml
+++ b/cloudfoundry-client/pom.xml
@@ -93,6 +93,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
+                    <additionalparam>-Xdoclint:-missing</additionalparam>
                     <sourceFileExcludes>
                         <exclude>org/cloudfoundry/dropsonde/events/*</exclude>
                     </sourceFileExcludes>
