Add Identity Zones Integration Tests
This commit adds the Identity Zones integration tests. It also updates
the definition of `client` to reflect undocumented fields returned from
Cloud Foundry.

[#114247167]

--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -14,9 +14,9 @@ run:
   path: cf-java-client/ci/integration-test.sh
 
 params:
+  TEST_ADMIN_CLIENTID:
+  TEST_ADMIN_CLIENTSECRET:
+  TEST_ADMIN_PASSWORD:
+  TEST_ADMIN_USERNAME:
   TEST_APIHOST:
-  TEST_PASSWORD:
   TEST_SKIPSSLVALIDATION:
-  TEST_UAA_CLIENTID:
-  TEST_UAA_CLIENTSECRET:
-  TEST_USERNAME:
