--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     </modules>
 
     <properties>
+        <commons-compress.version>1.12</commons-compress.version>
         <immutables.version>2.2.10</immutables.version>
         <jackson.version>2.8.0</jackson.version>
         <java-semver.version>0.9.0</java-semver.version>
