--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
         <netty.version>4.1.4.Final</netty.version>
         <okhttp.version>3.4.1</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <reactor-core.version>3.0.0.BUILD-SNAPSHOT</reactor-core.version>
-        <reactor-netty.version>0.5.0.BUILD-SNAPSHOT</reactor-netty.version>
+        <reactor-core.version>3.0.0.RC2</reactor-core.version>
+        <reactor-netty.version>0.5.0.M3</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
 
@@ -221,6 +221,14 @@
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
             <url>http://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>http://repo.spring.io/release</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
