Change default release repo
This change updates the default release repo.  Since we're now out of the 2.0
buildup, we won't be doing milestones any longer.

--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,7 @@
                                 <contextUrl>https://repo.spring.io</contextUrl>
                                 <username>{{ARTIFACTORY_USERNAME}}</username>
                                 <password>{{ARTIFACTORY_PASSWORD}}</password>
-                                <repoKey>{{ARTIFACTORY_REPO_KEY|"libs-milestone-local"}}</repoKey>
+                                <repoKey>{{ARTIFACTORY_REPO_KEY|"libs-release-local"}}</repoKey>
                                 <snapshotRepoKey>{{ARTIFACTORY_SNAPSHOT_REPO_KEY|"libs-snapshot-local"}}</snapshotRepoKey>
                             </publisher>
                         </configuration>
