--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
         <netty.version>4.1.4.Final</netty.version>
         <okhttp.version>3.4.1</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <reactor-core.version>3.0.1.BUILD-SNAPSHOT</reactor-core.version>
-        <reactor-netty.version>0.6.0.BUILD-SNAPSHOT</reactor-netty.version>
+        <reactor-core.version>3.0.1.RELEASE</reactor-core.version>
+        <reactor-netty.version>0.5.1.RELEASE</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
 
