--- a/pom.xml
+++ b/pom.xml
@@ -47,18 +47,18 @@
     </modules>
 
     <properties>
-        <assertj.version>3.5.2</assertj.version>
+        <assertj.version>3.6.1</assertj.version>
         <commons-compress.version>1.12</commons-compress.version>
         <immutables.version>2.2.10</immutables.version>
-        <jackson.version>2.8.3</jackson.version>
+        <jackson.version>2.8.5</jackson.version>
         <java-semver.version>0.9.0</java-semver.version>
         <jjwt.version>0.7.0</jjwt.version>
-        <netty.version>4.1.5.Final</netty.version>
-        <okhttp.version>3.4.1</okhttp.version>
+        <netty.version>4.1.6.Final</netty.version>
+        <okhttp.version>3.5.0</okhttp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <reactor-addons.version>3.0.3.RELEASE</reactor-addons.version>
         <reactor-core.version>3.0.3.RELEASE</reactor-core.version>
-        <reactor-netty.version>0.5.1.RELEASE</reactor-netty.version>
+        <reactor-netty.version>0.6.0.BUILD-SNAPSHOT</reactor-netty.version>
         <wire.version>2.2.0</wire.version>
     </properties>
 
@@ -136,7 +136,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <compilerArgs>
                             <arg>-Werror</arg>
