Update Spring Platform Dependency
This commit updates the project to the latest service release of the Spring Platform

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-RELEASE</version>
+        <version>Brussels-SR1</version>
     </parent>
 
     <groupId>org.cloudfoundry</groupId>
