--- a/cloudfoundry-operations/src/test/resources/fixtures/manifest-echo.yml
+++ b/cloudfoundry-operations/src/test/resources/fixtures/manifest-echo.yml
@@ -7,7 +7,7 @@ applications:
     ALPHA_KEY_1: alpha-value-1
     ALPHA_KEY_2: alpha-value-2
   health-check-http-endpoint: alpha-health-check-http-endpoint
-  health-check-type: alpha-health-check-type
+  health-check-type: none
   instances: -1
   memory: -1
   name: alpha-application-1
@@ -32,7 +32,7 @@ applications:
     ALPHA_KEY_1: alpha-value-1
     ALPHA_KEY_2: alpha-value-2
   health-check-http-endpoint: alpha-health-check-http-endpoint
-  health-check-type: alpha-health-check-type
+  health-check-type: port
   hosts:
   - alpha-host
   - alpha-hosts-1
