Application Manifest Utils Updates
Previously, there were a couple of bugs in the ApplicationManifestUtils due to
the fact that we'd never attempted to actually use a real manifest.  This
change updates the code to ensure relative paths are relative, and that memory
sizes with -ibi suffixes are parsed properly.

--- a/cloudfoundry-operations/src/test/resources/fixtures/manifest-alpha.yml
+++ b/cloudfoundry-operations/src/test/resources/fixtures/manifest-alpha.yml
@@ -7,7 +7,7 @@ applications:
   health-check-http-endpoint: alpha-health-check-http-endpoint
   health-check-type: none
   instances: -1
-  memory: -1
+  memory: 1M
   no-route: true
   path: /alpha-path
   random-route: true
@@ -38,7 +38,7 @@ applications:
   - alpha-hosts-1
   - alpha-hosts-2
   instances: -1
-  memory: -1
+  memory: 1G
   no-hostname: true
   no-route: true
   path: /alpha-path
